[gd_scene load_steps=2 format=2]

[ext_resource path="res://game/MainGame/ControlHex/Hexagon.gd" type="Script" id=1]

[node name="Hexagon" type="Node2D"]
z_index = 20
script = ExtResource( 1 )

[node name="Side1" type="Line2D" parent="."]
points = PoolVector2Array( 32, 0, 64, 16 )
width = 3.0
default_color = Color( 1, 1, 1, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Side2" type="Line2D" parent="."]
points = PoolVector2Array( 64, 48, 64, 16 )
width = 3.0
default_color = Color( 1, 1, 1, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Side3" type="Line2D" parent="."]
points = PoolVector2Array( 64, 48, 32, 64 )
width = 3.0
default_color = Color( 1, 1, 1, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Side4" type="Line2D" parent="."]
points = PoolVector2Array( 0, 48, 32, 64 )
width = 3.0
default_color = Color( 1, 1, 1, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Side5" type="Line2D" parent="."]
points = PoolVector2Array( 0, 48, 0, 16 )
width = 3.0
default_color = Color( 1, 1, 1, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Side6" type="Line2D" parent="."]
points = PoolVector2Array( 32, 0, 0, 16 )
width = 3.0
default_color = Color( 1, 1, 1, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
